--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -113,6 +113,10 @@ Naming/BinaryOperatorParameterName:
 Naming/PredicateName:
   Enabled: false
 
+Rails/ApplicationRecord:
+  Exclude:
+    - 'db/migrate/0*.rb'
+
 Rails/BulkChangeTable:
   Exclude:
     - 'db/migrate/20120714122200_add_workflows_rule_fields.rb'
